<resources>
    <string name="app_name">fitpals</string>
    <string name="create_workout">Create Workout</string>
    <string name="workout_title">Workout Title</string>
    <string name="workout_description">Workout Description</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="save_workout">Save Workout</string>
    <string name="no_friend">No Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="welcome">Welcome</string>
    <string name="joint_workout_invites">Hey! We can workout.</string>
    <string name="no_invites">No Joint Workout Invites</string>
    <string name="accept_invite">Accept Invite</string>
    <string name="reject_invite">Reject Invite</string>
    <string name="no_workouts">No Workouts</string>
    <string name="hint_password">Password hint</string>
    <string name="hint_email">Email hint</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Register</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="total_workouts">Total Workouts</string>
    <string name="total_calories">Total Calories</string>
    <string name="total_duration">Total Duration</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password_success">Password changed successfully</string>
    <string name="change_email_success">Email changed successfully</string>
    <string name="change_password_error">Error changing password</string>
    <string name="change_email_error">Error changing email</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_email_title">Change Email</string>
    <string name="change_password_hint">Enter new password</string>
    <string name="change_email_hint">Enter new email</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_email_button">Change Email</string>
    <string name="change_password_success_title">Password Changed</string>
    <string name="change_email_success_title">Email Changed</string>
    <string name="change_password_error_title">Error Changing Password</string>
    <string name="change_email_error_title">Error Changing Email</string>
    <string name="hint_name">Name hint</string>
    <string name="hint_age">Age hint</string>
    <string name="hint_height">Height hint</string>
    <string name="hint_weight">Weight hint</string>
    <string name="hint_gender">Gender hint</string>
    <string name="title_home">Home</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_workout">Create Workout</string>
    <string name="sets">How many sets?</string>
    <string name="reps">How many reps?</string>
    <string name="weight">How much weight?</string>
    <string name="rest_time">How long is the rest time?</string>
    <string name="decline_invite">I cannot join this workout</string>
</resources>